[package]
name = "iyes_ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.bevy]
version = "0.11"
default-features = false
features = [
    "bevy_ui",
]

[dependencies.iyes_cli]
git = "https://github.com/IyesGames/iyes_cli"
optional = true
